--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
 packages = [{include = "yassa_bio", from = "src"}]
 
 
-[tool.poetry.group.test.dependencies]
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.2.0"
+ruff = "^0.12.1"
+black = "^25.1.0"
+mypy = "^1.16.1"
 pytest = "^8.4.1"
 
 [build-system]
