--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ ruff = "^0.12.1"
 black = "^25.1.0"
 mypy = "^1.16.1"
 pytest = "^8.4.1"
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
