--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,13 @@ repos:
     rev: v0.12.1
     hooks:
       - id: ruff
-        args: [--fix, --unsafe-fixes]
+        args:
+          [
+            "--fix",
+            "--unsafe-fixes",
+            "--line-length=88",
+            "--select=E,F,B,I,UP,C90,RUF,TID"
+          ]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.16.1
