--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "yassa_bio", from = "src"}]
 
+[tool.ruff.lint]
+select = ["E", "F"]
+
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
