--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
+    "numpy (>=2.3.1,<3.0.0)",
+    "pandas (>=2.3.0,<3.0.0)",
+    "scipy (>=1.16.0,<2.0.0)",
 ]
 
 [tool.poetry]
