--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy (>=2.3.1,<3.0.0)",
     "pandas (>=2.3.0,<3.0.0)",
     "scipy (>=1.16.0,<2.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 [tool.poetry]
