--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pandas (>=2.3.0,<3.0.0)",
     "scipy (>=1.16.0,<2.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
+    "outlier-utils (>=0.0.5,<0.0.6)",
 ]
 
 [tool.poetry]
