--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "scipy (>=1.16.0,<2.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
     "outlier-utils (>=0.0.5,<0.0.6)",
-    "pytest-mock (>=3.14.1,<4.0.0)",
 ]
 
 [tool.poetry]
@@ -31,6 +30,7 @@ black = "^25.1.0"
 mypy = "^1.16.1"
 pytest = "^8.4.1"
 pytest-cov = "^6.2.1"
+pytest-mock = "^3.14.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
