--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,8 +42,10 @@ jobs:
         run: |
           poetry run pytest -q --cov=yassa_bio --cov-report=term-missing --cov-report=xml
 
-      - name: Upload coverage.xml
-        uses: actions/upload-artifact@v4
+      # Upload coverage to Codecov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
-          name: coverage
-          path: coverage.xml
+          file: ./coverage.xml
+          flags: unittests
+          fail_ci_if_error: true
