--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scipy (>=1.16.0,<2.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
     "outlier-utils (>=0.0.5,<0.0.6)",
+    "lilpipe (>=0.1.6,<0.2.0)",
 ]
 
 [tool.poetry]
